# aget

./: Cargo.toml
.github/workflows/: cross-mac-release.yml  cross-release.yml  release.yml
src/: cli.rs  main.rs
